<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="14">

<!--The Top View of the Calculator-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/test"
        android:paddingTop="10dp"
        android:paddingEnd="@string/topViewPadding"
        android:paddingStart="@string/topViewPadding"
        android:textAlignment="textEnd"
        android:textSize="@string/topViewSize"
        android:textStyle="bold"
        >
    </TextView>

<!--    First Row of Buttons: C, +/-, %, and / -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="1">

<!--        Clear -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/clear"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights"
            >
        </com.google.android.material.button.MaterialButton>

<!--        Signs-->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/sign"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights"
            >
        </com.google.android.material.button.MaterialButton>

<!--        Percent -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/percent"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights">
        </com.google.android.material.button.MaterialButton>

<!--        Division-->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/divide"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

<!--    Second Row of Buttons: 7, 8, 9, X -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="1">

        <!--        7 -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/seven"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights"
            >
        </com.google.android.material.button.MaterialButton>

        <!--        8-->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/eight"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights"
            >
        </com.google.android.material.button.MaterialButton>

        <!--        9 -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/nine"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights">
        </com.google.android.material.button.MaterialButton>

        <!--        Multiply-->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/multiply"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

<!--    Third Row of Buttons: 4, 5, 6, - -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="1">

        <!--        4 -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/four"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights"
            >
        </com.google.android.material.button.MaterialButton>

        <!--        5-->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/five"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights"
            >
        </com.google.android.material.button.MaterialButton>

        <!--        6 -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/six"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights">
        </com.google.android.material.button.MaterialButton>

        <!--        - -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/subtract"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

<!--    Fourth Row of Buttons: 1, 2, 3, + -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="1">

        <!--        1 -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/one"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights"
            >
        </com.google.android.material.button.MaterialButton>

        <!--        2-->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/two"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights"
            >
        </com.google.android.material.button.MaterialButton>

        <!--        3 -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/three"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights">
        </com.google.android.material.button.MaterialButton>

        <!--        Addition -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/addition"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

<!--    Last Row of Buttons: 0, . , = -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="1">

        <!--        0 -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bZeroWeight"
            android:text="@string/zero"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights"
            >
        </com.google.android.material.button.MaterialButton>

        <!--        decimal-->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/decimal"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights"
            >
        </com.google.android.material.button.MaterialButton>

        <!--        equals -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/bWeights"
            android:text="@string/equals"
            android:layout_margin="2dp"
            android:textSize="@string/bTextSize"
            app:cornerRadius="5dp"
            tools:ignore="NestedWeights">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>


</LinearLayout>